k3s/uptime-kuma/service.yml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
  namespace: monitoring
spec:
  selector:
    app: uptime-kuma
  ports:
    - port: 80
      targetPort: 3001
